--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 			<version>5.2.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.theokanning.openai-gpt3-java</groupId>
+			<artifactId>service</artifactId>
+			<version>0.14.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
